[gd_scene load_steps=5 format=3 uid="uid://ea74xhgn8w5s"]

[ext_resource type="Script" uid="uid://bhcfvuljafiyd" path="res://scènes/main.gd" id="1_8mlq6"]
[ext_resource type="PackedScene" uid="uid://d4fsrc7wmj1l2" path="res://scènes/player.tscn" id="2_ipjmd"]
[ext_resource type="PackedScene" uid="uid://bemt7qad75hff" path="res://scènes/mob.tscn" id="2_ryvcx"]

[sub_resource type="Curve2D" id="Curve2D_ryvcx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node2D"]
script = ExtResource("1_8mlq6")
mob_scene = ExtResource("2_ryvcx")

[node name="player" parent="." instance=ExtResource("2_ipjmd")]

[node name="mobtimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoretimer" type="Timer" parent="."]

[node name="starttimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startposition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="mobpath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ryvcx")

[node name="mobspawnlocation" type="PathFollow2D" parent="mobpath"]

[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="mobtimer" to="." method="_on_mobtimer_timeout"]
[connection signal="timeout" from="scoretimer" to="." method="_on_scoretimer_timeout"]
[connection signal="timeout" from="starttimer" to="." method="_on_starttimer_timeout"]
